quorum/test/tests/TypeChecker/Fail/ImpAssignIntObjBooleanWrapped.quorum
class main
    action main
        Integer i = true
    end
end